unpackaged/main/default/objects/Service_Parameter__c/Service_Parameter__c.object-meta.xml
<CustomObject>
    <label>Service Parameter</label>
    <nameField>
        <label>Service Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>