unpackaged/main/default/objects/Service_Parameter__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <description>Activité</description>
    <label>Activity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StructureLevel1</valueSetName>
    </valueSet>
</CustomField>