unpackaged/main/default/objects/Service_Parameter__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <description>Agence de rattachement</description>
    <inlineHelpText>Agence de rattachement</inlineHelpText>
    <label>Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agency</valueSetName>
    </valueSet>
</CustomField>