unpackaged/main/default/objects/Service_Parameter__c/fields/Auto_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Auto_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Abonnement automatique</description>
    <inlineHelpText>Abonnement automatique</inlineHelpText>
    <label>Auto Subscription</label>
    <type>Checkbox</type>
</CustomField>