unpackaged/main/default/objects/Service_Parameter__c/fields/Back_Office__c.field-meta.xml
<CustomField>
    <fullName>Back_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Réservé Back Office</description>
    <inlineHelpText>Réservé Back Office</inlineHelpText>
    <label>Back Office</label>
    <type>Checkbox</type>
</CustomField>