unpackaged/main/default/objects/Service_Parameter__c/fields/Declad_Key__c.field-meta.xml
<CustomField>
    <fullName>Declad_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilisé par passeport pour indiquer si des API peuvent consommer ce service</description>
    <label>Declad Key</label>
    <type>Checkbox</type>
</CustomField>