unpackaged/main/default/objects/Service_Parameter__c/fields/Declare_Key__c.field-meta.xml
<CustomField>
    <fullName>Declare_Key__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Utilisé par passeport pour indiquer si des API peuvent consommer ce service</description>
    <inlineHelpText>Utilisé par passeport pour indiquer si des API peuvent consommer ce service</inlineHelpText>
    <label>Declare Key</label>
    <type>Checkbox</type>
</CustomField>