unpackaged/main/default/objects/Service_Parameter__c/fields/Dependant__c.field-meta.xml
<CustomField>
    <fullName>Dependant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service dépendant</description>
    <label>Dependant</label>
    <referenceTo>Service_Parameter__c</referenceTo>
    <relationshipLabel>Services Parameters (Dependant)</relationshipLabel>
    <relationshipName>Services_Parameters2</relationshipName>
    <type>Lookup</type>
</CustomField>