unpackaged/main/default/objects/Service_Parameter__c/fields/Duplicate_On_Children__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_On_Children__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Répliquer le service sur les comptes fils</description>
    <inlineHelpText>Répliquer le service sur les comptes fils</inlineHelpText>
    <label>Duplicate On Children</label>
    <type>Checkbox</type>
</CustomField>