unpackaged/main/default/objects/Service_Parameter__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Date de fin de validité</description>
    <inlineHelpText>Date de fin de validité</inlineHelpText>
    <label>End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>