unpackaged/main/default/objects/Service_Parameter__c/fields/Expertise__c.field-meta.xml
<CustomField>
    <fullName>Expertise__c</fullName>
    <description>Expertise</description>
    <label>Expertise</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Specific_Rules__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Expertise</valueSetName>
    </valueSet>
</CustomField>