unpackaged/main/default/objects/Service_Parameter__c/fields/Extended_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Extended_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Abonnement étendu</description>
    <inlineHelpText>Abonnement étendu</inlineHelpText>
    <label>Extended Subscription</label>
    <type>Checkbox</type>
</CustomField>