unpackaged/main/default/objects/Service_Parameter__c/fields/Gestion_Code__c.field-meta.xml
<CustomField>
    <fullName>Gestion_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Gestion du CDE</description>
    <inlineHelpText>Gestion du CDE</inlineHelpText>
    <label>Gestion CDE</label>
    <type>Checkbox</type>
</CustomField>