unpackaged/main/default/objects/Service_Parameter__c/fields/IS_Synchro_Date__c.field-meta.xml
<CustomField>
    <fullName>IS_Synchro_Date__c</fullName>
    <description>Date de synchro</description>
    <label>IS Synchro Date</label>
    <type>DateTime</type>
</CustomField>