unpackaged/main/default/objects/Service_Parameter__c/fields/Langage_code__c.field-meta.xml
<CustomField>
    <fullName>Langage_code__c</fullName>
    <label>Langue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>fr-FR</fullName>
                <default>true</default>
                <label>fr-FR</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>