unpackaged/main/default/objects/Service_Parameter__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <formula>LastModifiedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LastModifiedDate</label>
    <type>DateTime</type>
</CustomField>