unpackaged/main/default/objects/Service_Parameter__c/fields/Migtiers__c.field-meta.xml
<CustomField>
    <fullName>Migtiers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Migration du Tiers</description>
    <inlineHelpText>Migration du Tiers</inlineHelpText>
    <label>Migtiers</label>
    <type>Checkbox</type>
</CustomField>