unpackaged/main/default/objects/Service_Parameter__c/fields/Offer__c.field-meta.xml
<CustomField>
    <fullName>Offer__c</fullName>
    <description>Gamme-Solution</description>
    <label>Offer</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Specific_Rules__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Offer</valueSetName>
    </valueSet>
</CustomField>