unpackaged/main/default/objects/Service_Parameter__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Chapeau</description>
    <label>Parent</label>
    <referenceTo>Service_Parameter__c</referenceTo>
    <relationshipLabel>Services Parameters</relationshipLabel>
    <relationshipName>Services_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>