unpackaged/main/default/objects/Service_Parameter__c/fields/Partner_Ship__c.field-meta.xml
<CustomField>
    <fullName>Partner_Ship__c</fullName>
    <description>Type de Partner</description>
    <inlineHelpText>Type de Partner</inlineHelpText>
    <label>Partner Ship</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Partnership</valueSetName>
    </valueSet>
</CustomField>