unpackaged/main/default/objects/Service_Parameter__c/fields/Private__c.field-meta.xml
<CustomField>
    <fullName>Private__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private</label>
    <type>Checkbox</type>
</CustomField>