unpackaged/main/default/objects/Service_Parameter__c/fields/Quantity_Management__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Suivi en quantité</description>
    <label>Quantity Management</label>
    <type>Checkbox</type>
</CustomField>