unpackaged/main/default/objects/Service_Parameter__c/fields/Reattach__c.field-meta.xml
<CustomField>
    <fullName>Reattach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reattach</label>
    <referenceTo>Service_Parameter__c</referenceTo>
    <relationshipLabel>Services Parameters (Reattach)</relationshipLabel>
    <relationshipName>Services_Parameters1</relationshipName>
    <type>Lookup</type>
</CustomField>