unpackaged/main/default/objects/Service_Parameter__c/fields/Rights_Group__c.field-meta.xml
<CustomField>
    <fullName>Rights_Group__c</fullName>
    <description>Groupe de Droits Active Directory</description>
    <inlineHelpText>Groupe de Droits Active Directory</inlineHelpText>
    <label>Rights Group</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>