unpackaged/main/default/objects/Service_Parameter__c/fields/Security_Level__c.field-meta.xml
<CustomField>
    <fullName>Security_Level__c</fullName>
    <description>Niveau de sécurité</description>
    <label>Security Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Sécurité Faible</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Sécutité Moyenne</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Sécurité Forte</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>