unpackaged/main/default/objects/Service_Parameter__c/fields/Server_Sites__c.field-meta.xml
<CustomField>
    <fullName>Server_Sites__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Server Sites</description>
    <label>Server Sites</label>
    <type>Checkbox</type>
</CustomField>