unpackaged/main/default/objects/Service_Parameter__c/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <description>Code service</description>
    <displayFormat>S-{00000}</displayFormat>
    <label>Service Code</label>
    <type>AutoNumber</type>
</CustomField>