unpackaged/main/default/objects/Service_Parameter__c/fields/Service_Description_Fr__c.field-meta.xml
<CustomField>
    <fullName>Service_Description_Fr__c</fullName>
    <label>Service Description (Fr)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>