unpackaged/main/default/objects/Service_Parameter__c/fields/Service_Description_francais__c.field-meta.xml
<CustomField>
    <fullName>Service_Description_francais__c</fullName>
    <label>Service Description (FR)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>