unpackaged/main/default/objects/Service_Parameter__c/fields/Service_Family__c.field-meta.xml
<CustomField>
    <fullName>Service_Family__c</fullName>
    <description>Famille de service</description>
    <inlineHelpText>Famille de service</inlineHelpText>
    <label>Service Family</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>001</fullName>
                <label>Gestion Back Office</label>
            </value>
            <value>
                <fullName>002</fullName>
                <label>Administratif</label>
            </value>
            <value>
                <fullName>003</fullName>
                <label>Communautaire</label>
            </value>
            <value>
                <fullName>004</fullName>
                <label>Infos produits</label>
            </value>
            <value>
                <fullName>005</fullName>
                <label>Préférence</label>
            </value>
            <value>
                <fullName>006</fullName>
                <label>Services en ligne</label>
            </value>
            <value>
                <fullName>007</fullName>
                <label>Support</label>
            </value>
            <value>
                <fullName>008</fullName>
                <label>Vente</label>
            </value>
            <value>
                <fullName>009</fullName>
                <label>Flux d'informations</label>
            </value>
            <value>
                <fullName>010</fullName>
                <label>Gestion</label>
            </value>
            <value>
                <fullName>011</fullName>
                <label>Services de contribution (WCM)</label>
            </value>
            <value>
                <fullName>012</fullName>
                <label>Services internes Cegid</label>
            </value>
            <value>
                <fullName>013</fullName>
                <label>Notification</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>