unpackaged/main/default/objects/Service_Parameter__c/fields/Service_Label__c.field-meta.xml
<CustomField>
    <fullName>Service_Label__c</fullName>
    <description>Libellé du service</description>
    <label>Service Label</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>