unpackaged/main/default/objects/Service_Parameter__c/fields/Service_label_fr__c.field-meta.xml
<CustomField>
    <fullName>Service_label_fr__c</fullName>
    <label>Service label Description (fr)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>