unpackaged/main/default/objects/Service_Parameter__c/fields/Specific_Account__c.field-meta.xml
<CustomField>
    <fullName>Specific_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specific Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services Parameters</relationshipLabel>
    <relationshipName>Services_Parameters</relationshipName>
    <type>Lookup</type>
</CustomField>