unpackaged/main/default/objects/Service_Parameter__c/fields/Specific_Monitoring__c.field-meta.xml
<CustomField>
    <fullName>Specific_Monitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Le tiers doit être associé au suivi particulier</description>
    <inlineHelpText>Le tiers doit être associé au suivi particulier</inlineHelpText>
    <label>Specific Monitoring</label>
    <type>Checkbox</type>
</CustomField>