unpackaged/main/default/objects/Service_Parameter__c/fields/Specific_Rules__c.field-meta.xml
<CustomField>
    <fullName>Specific_Rules__c</fullName>
    <description>Quel type de règle particulière le service possède</description>
    <inlineHelpText>Précise quel type de règle particulière le service possède</inlineHelpText>
    <label>Specific Rules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOUT_TIERS</fullName>
                <label>Tout Tiers</label>
            </value>
            <value>
                <fullName>TIERS_PARTENAIRE</fullName>
                <label>Tiers partenaire</label>
            </value>
            <value>
                <fullName>AVEC_GAMMESOLUTION</fullName>
                <label>Au moins un article parc en service avec Offer</label>
            </value>
            <value>
                <fullName>UN_FONCTIONNEL</fullName>
                <label>Au moins un article parc en service avec Core Business</label>
            </value>
            <value>
                <fullName>TIERS_HEBERGE</fullName>
                <label>Hébergé</label>
            </value>
            <value>
                <fullName>UN_TIERS</fullName>
                <label>Spécifique Tiers</label>
            </value>
            <value>
                <fullName>UN_CODESERVICE</fullName>
                <label>Activity</label>
            </value>
            <value>
                <fullName>UNE_AGENCE</fullName>
                <label>Agency</label>
            </value>
            <value>
                <fullName>UNE_AGENCE_GAMMESOLUTION</fullName>
                <label>Agency - Offer</label>
            </value>
            <value>
                <fullName>NIVEAUX_SERVICE</fullName>
                <label>Core Business - Offer - Niveau de service</label>
            </value>
            <value>
                <fullName>UNE_EXPERTISE</fullName>
                <label>Tiers Expertise</label>
            </value>
            <value>
                <fullName>SPECIF_CEGIDLIFE</fullName>
                <label>Spécifique CegidLife</label>
            </value>
            <value>
                <fullName>AUCUNE</fullName>
                <isActive>false</isActive>
                <label>Aucune</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>