unpackaged/main/default/objects/Service_Parameter__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Date de début de validité</description>
    <inlineHelpText>Date de début de validité</inlineHelpText>
    <label>Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>