unpackaged/main/default/objects/Service_Parameter__c/fields/Syncho_IS__c.field-meta.xml
<CustomField>
    <fullName>Syncho_IS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Synchronisation IS</description>
    <label>Syncho IS</label>
    <type>Checkbox</type>
</CustomField>