unpackaged/main/default/objects/Service_Parameter__c/fields/Target_Service__c.field-meta.xml
<CustomField>
    <fullName>Target_Service__c</fullName>
    <label>Target Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CegidLife.com</fullName>
            </value>
            <value>
                <fullName>Gestion des utilisateurs</fullName>
            </value>
            <value>
                <fullName>ITSM</fullName>
            </value>
            <value>
                <fullName>Webfi</fullName>
            </value>
            <value>
                <fullName>User plateforme Saas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>