unpackaged/main/default/objects/Service_Parameter__c/fields/User_Subscription__c.field-meta.xml
<CustomField>
    <fullName>User_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Abonnement utilisateur</description>
    <inlineHelpText>Abonnement utilisateur</inlineHelpText>
    <label>User Subscription</label>
    <type>Checkbox</type>
</CustomField>