unpackaged/main/default/objects/Service_Parameter__c/fields/Visibility__c.field-meta.xml
<CustomField>
    <fullName>Visibility__c</fullName>
    <label>Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Utilisateur</fullName>
                <default>true</default>
                <label>Utilisateur</label>
            </value>
            <value>
                <fullName>Administrateur</fullName>
            </value>
            <value>
                <fullName>Administrateur Superviseur</fullName>
            </value>
            <value>
                <fullName>Super administrateur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>