unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Ag_Offer_with_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Ag_Offer_with_Specific_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Specific_Rules__c,'UNE_AGENCE_GAMMESOLUTION'),
ISBLANK(TEXT(Agency__c)),
ISBLANK(TEXT(Offer__c)),
NOT($User.BypassVR__c )
)</errorConditionFormula>
    <errorMessage>Une Specific rule  avec Agency -Offer doit avoir une Agency ou une Offer</errorMessage>
</ValidationRule>