unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Agency_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Agency_Specific_Rules</fullName>
    <active>true</active>
    <description>Une Specific rule avec Agency doit avoir une Agency</description>
    <errorConditionFormula>AND(
NOT($User.BypassVR__c ),
ISBLANK(TEXT(Agency__c)),
ISPICKVAL(Specific_Rules__c,'UNE_AGENCE')
)</errorConditionFormula>
    <errorMessage>Une Specific rule avec Agency doit avoir une Agency</errorMessage>
</ValidationRule>