unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Article_par_with_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Article_par_with_Specific_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
NOT($User.BypassVR__c ),
ISPICKVAL(Specific_Rules__c,'AVEC_GAMMESOLUTION'),
ISBLANK(TEXT(Offer__c ))
)</errorConditionFormula>
    <errorMessage>Une Specific rule avec Au moins un article parc en service avec Offer doit avoir une Offre</errorMessage>
</ValidationRule>