unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_CB_Offer_NS_with_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_CB_Offer_NS_with_Specific_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Specific_Rules__c,'NIVEAUX_SERVICE'),
ISBLANK(TEXT(Core_Business__c  )),
ISBLANK(TEXT(Offer__c )),
ISNULL(Service_Level_feature__c),
NOT($User.BypassVR__c )
)</errorConditionFormula>
    <errorMessage>Une Specific rule  avec Core Business-Offer-Niveau de service doit avoir un Offer ou un Core Business ou un Service Level Feature.</errorMessage>
</ValidationRule>