unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_CDE_Dup_On_children.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_CDE_Dup_On_children</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
Gestion_Code__c=True,  
 Duplicate_On_Children__c = True
)</errorConditionFormula>
    <errorMessage>Un service Gestion du CDE ne peut être  Duplicate on Children</errorMessage>
</ValidationRule>