unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Core_Biz_with_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Core_Biz_with_Specific_Rules</fullName>
    <active>false</active>
    <errorConditionFormula>AND
(
OR(
ISPICKVAL(Specific_Rules__c,'UN_FONCTIONNEL'),
ISPICKVAL(Specific_Rules__c ,'NIVEAUX_SERVICE')
),
ISBLANK(TEXT(Core_Business__c)),
NOT($User.BypassVR__c )
)</errorConditionFormula>
    <errorMessage>Une Specific rule  avec Fonctionnel ou Niveau Service doivent avoir un Core Business</errorMessage>
</ValidationRule>