unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_check_Declare_CDKey_Reattacch.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_check_Declare_CDKey_Reattacch</fullName>
    <active>true</active>
    <description>Un service avec Déclaration CD Key ne peut pas être Rattaché</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),

NOT(ISBLANK( Reattach__c )),
Declare_Key__c= true
)</errorConditionFormula>
    <errorMessage>Un service avec Déclaration CD Key ne peut pas être Rattaché</errorMessage>
</ValidationRule>