unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_End_Date_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_End_Date_Start_Date</fullName>
    <active>true</active>
    <description>La date Fin de validité doit être supérieure à la date de Début.</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
End_Date__c &lt;= Start_Date__c
)</errorConditionFormula>
    <errorMessage>La date Fin de validité doit être supérieure à la date de Début.</errorMessage>
</ValidationRule>