unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Expertise_with_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Expertise_with_Specific_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Specific_Rules__c,'UNE_EXPERTISE'),
ISBLANK(TEXT(Expertise__c)),
NOT($User.BypassVR__c )
)</errorConditionFormula>
    <errorMessage>Une Specific rule  avec Tiers Expertise doit avoir une Expertise</errorMessage>
</ValidationRule>