unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Offer_with_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Offer_with_Specific_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Specific_Rules__c,'TIERS_PARTENAIRE'),
ISBLANK(TEXT( Partner_Ship__c )),
ISBLANK(TEXT( Offer__c )),
NOT($User.BypassVR__c )
)</errorConditionFormula>
    <errorMessage>Une Specific rule  avec Tiers Partenaire doit avoir un Partner Ship ou un Offer</errorMessage>
</ValidationRule>