unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Parc_CC_with_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Parc_CC_with_Specific_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Specific_Rules__c,'UN_FONCTIONNEL'),
ISBLANK(TEXT( Core_Business__c )),

NOT($User.BypassVR__c )
)</errorConditionFormula>
    <errorMessage>Une Specific rule  avecAu moins un article parc en service avec Core Business doit avoir un Core Business</errorMessage>
</ValidationRule>