unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Private_Sub_Auto.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Private_Sub_Auto</fullName>
    <active>true</active>
    <description>Un service Privé ne peut être en Abonnement auto</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
Private__c=True,
Auto_Subscription__c= True
)</errorConditionFormula>
    <errorMessage>Un service Privé ne peut être en Abonnement auto</errorMessage>
</ValidationRule>