unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_security_level.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_security_level</fullName>
    <active>true</active>
    <description>le security level doit être renseigné</description>
    <errorConditionFormula>AND(
NOT($User.BypassVR__c ),
ISBLANK(TEXT( Security_Level__c))
)</errorConditionFormula>
    <errorMessage>le security level doit être renseigné</errorMessage>
</ValidationRule>