unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Spec_Tiers_with_Specific_Rules.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Spec_Tiers_with_Specific_Rules</fullName>
    <active>true</active>
    <errorConditionFormula>AND
(
ISPICKVAL(Specific_Rules__c,'UN_TIERS'),
ISBLANK(Specific_Account__c),
NOT($User.BypassVR__c )
)</errorConditionFormula>
    <errorMessage>Une Specific rule  avec Specifique Tiers doit avoir un Account.</errorMessage>
</ValidationRule>