unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_check_User_Subscription_Auto_Sub.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_check_User_Subscription_Auto_Sub</fullName>
    <active>true</active>
    <description>Un service sans Abonnement utilisateur ne peut pas être en Abonnement automatique.</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
User_Subscription__c=False,  
Auto_Subscription__c=True
)</errorConditionFormula>
    <errorMessage>Un service sans Abonnement utilisateur ne peut pas être en Abonnement automatique.</errorMessage>
</ValidationRule>