unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_check_User_Subscription_Extended_Subs.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_check_User_Subscription_Extended_Subs</fullName>
    <active>true</active>
    <description>Un service sans Abonnement utilisateur ne peut pas être en Abonnement étendu.</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
User_Subscription__c=False,  
Extended_Subscription__c = True
)</errorConditionFormula>
    <errorMessage>Un service sans Abonnement utilisateur ne peut pas être en Abonnement étendu.</errorMessage>
</ValidationRule>