unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_check_User_Subscription_Gestion_Code.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_check_User_Subscription_Gestion_Code</fullName>
    <active>true</active>
    <description>Un service sans Abonnement utilisateur ne peut pas être  Duplicate on Children</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
User_Subscription__c=False,  
Gestion_Code__c= True
)</errorConditionFormula>
    <errorMessage>Un service sans Abonnement utilisateur ne peut pas être  Duplicate on Children</errorMessage>
</ValidationRule>