unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_check_User_Subscription_Private.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_check_User_Subscription_Private</fullName>
    <active>true</active>
    <description>Un service sans Abonnement utilisateur ne peut pas être privé.</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
User_Subscription__c=False,  
Private__c= True
)</errorConditionFormula>
    <errorMessage>Un service sans Abonnement utilisateur ne peut pas être privé.</errorMessage>
</ValidationRule>