unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_check_User_Subscription_Quantity_Man.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_check_User_Subscription_Quantity_Man</fullName>
    <active>true</active>
    <description>Un service sans Abonnement utilisateur ne peut pas être en Suivi en quantité.</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
User_Subscription__c=False,  
Quantity_Management__c= True
)</errorConditionFormula>
    <errorMessage>'Un service sans Abonnement utilisateur ne peut pas être en Suivi en quantité.</errorMessage>
</ValidationRule>