unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_check_User_Subscription_Server_Sites.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_check_User_Subscription_Server_Sites</fullName>
    <active>true</active>
    <description>Un service sans Abonnement utilisateur ne peut pas être en Server Sites</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
User_Subscription__c=False,  
 Server_Sites__c = True
)</errorConditionFormula>
    <errorMessage>Un service sans Abonnement utilisateur ne peut pas être en Server Sites</errorMessage>
</ValidationRule>