unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Visibility_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Visibility_Parent</fullName>
    <active>true</active>
    <description>Un service Chapeau ne peut pas avoir aucune visibilité</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
ISBLANK(Visibility__c),
NOT(ISBLANK( Parent__c))
)</errorConditionFormula>
    <errorMessage>Un service Chapeau ne peut pas avoir aucune visibilité</errorMessage>
</ValidationRule>