unpackaged/main/default/objects/Service_Parameter__c/validationRules/VR_Check_Visibility_Reattach_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Check_Visibility_Reattach_Parent</fullName>
    <active>true</active>
    <description>Ce service doit être rattaché à un service Chapeau.</description>
    <errorConditionFormula>AND(
NOT( $User.BypassVR__c ),
ISBLANK(Visibility__c),
ISBLANK( Reattach__c ),
ISBLANK( Parent__c)
)</errorConditionFormula>
    <errorMessage>Ce service doit être rattaché à un service Chapeau.</errorMessage>
</ValidationRule>